@@ -19,54 +19,61 @@ GoodNewsResource.page.UpdateGoodNewsResourceMailing = function(config) {
 Ext.extend(GoodNewsResource.page.UpdateGoodNewsResourceMailing,MODx.page.UpdateResource,{
     getButtons: function(cfg) {
         var btns = [];
+        
         if (cfg.readOnly == 1) {
+            
             btns.push({
                 text: _('goodnews.mailing_readonly')
-                ,handler: Ext.emptyFn
                 ,id: 'gon-abtn-readonly'
+                ,handler: Ext.emptyFn
                 ,disabled: true
             });
-            btns.push('-');
+            
         } else {
-            if (cfg.canSave == 1) {
-                btns.push({
-                    process: MODx.config.connector_url ? 'resource/update' : 'update'
-                    ,id: 'modx-abtn-save'
-                    ,text: _('save')
-                    ,method: 'remote'
-                    ,cls: 'primary-button'
-                    ,checkDirty: cfg.richtext || MODx.request.activeSave == 1 ? false : true
-                    ,keys: [{
-                        key: MODx.config.keymap_save || 's'
-                        ,ctrl: true
-                    }]
-                });
-                btns.push('-');
-            } else if (cfg.locked) {
-                btns.push({
-                    text: cfg.lockedText || _('locked')
-                    ,handler: Ext.emptyFn
-                    ,id: 'modx-abtn-locked'
-                    ,disabled: true
-                });
-                btns.push('-');
-            }
+            
+            btns.push({
+                text: cfg.lockedText || _('locked')
+                ,id: 'modx-abtn-locked'
+                ,handler: Ext.emptyFn
+                ,hidden: (cfg.canSave == 1)
+                ,disabled: true
+            });
+
+            btns.push({
+                process: 'resource/update'
+                ,text: _('save')
+                ,id: 'modx-abtn-save'
+                ,cls: 'primary-button'
+                ,method: 'remote'
+                ,hidden: !(cfg.canSave == 1)
+                //,checkDirty: MODx.request.reload ? false : true
+                ,keys: [{
+                    key: MODx.config.keymap_save || 's'
+                    ,ctrl: true
+                }]
+            });            
         }
+        
         btns.push({
-            process: 'preview'
-            ,text: _('view')
+            text: _('view')
+            ,id: 'modx-abtn-preview'
             ,handler: this.preview
             ,scope: this
-            ,id: 'modx-abtn-preview'
         });
-        btns.push('-');
+        
         btns.push({
-            process: 'cancel'
-            ,text: _('cancel')
+            text: _('cancel')
+            ,id: 'modx-abtn-cancel'
             ,handler: this.cancel
             ,scope: this
-            ,id: 'modx-abtn-cancel'
         });
+        
+        btns.push({
+            text: _('help_ex')
+            ,id: 'modx-abtn-help'
+            ,handler: MODx.loadHelpPane
+        });
+        
         return btns;
     }
     ,cancel: function(btn,e) {
